<resources>
    <string name="app_name">SO2 支援あぷり</string>
    <string name="sourceText">原料・道具</string>
    <string name="prodText">完成品</string>
    <string name="resultText">結果</string>
    <string name="defaultText">default．．．</string>
    <string name="defaultEqu">ここに計算式が表示されてほしい(；人；) ｵﾈｶﾞｲ </string>
    <string name="defaultGPH">時給 ．．． G/h</string>
    <string name="drawer_open">作業リストを開く</string>
    <string name="drawer_close">作業リストを閉じる</string>
    <string name="addSrcButton">原料・道具を追加</string>
    <string name="addProdButton">成果品を追加</string>
    <string name="itemicon">itemIcon</string>
    <string name="delete">delete</string>
    <string name="addItem">アイテムを追加</string>
    <string name="itemImageDescript" />
    <string name="toolCheckboxText">道具(確率で消費なのか～？)</string>
    <string name="valueTextHint">金額を入力</string>
    <string name="add1">+1</string>
    <string name="add10">+10</string>
    <string name="add100">+100</string>
    <string name="add1000">+1000</string>
    <string name="add10000">+10000</string>
    <string name="breakProbHint">消費率(%)</string>
    <string name="plus_minus">＋/－</string>
    <string name="cancelButton">キャンセル</string>
    <string name="addButtonText">追加</string>
    <string name="numHint">数を入力</string>
    <string name="miscTitleText">時間とか</string>
    <string name="button">変更</string>
    <string name="taskTimeText">作業時間：</string>
    <string name="work_name_default">ポーションを作る</string>
    <string name="deleteStartText">削除開始</string>
    <string name="deleteIconDexcription">削除アイコン</string>
    <string name="save_description">保存ボタン</string>
    <string name="new_work_descript">作業新規作成</string>
    <string name="toggle_del_start">削除開始</string>
    <string name="toggle_del_end">削除完了</string>
    <string name="work_name_desc">作業名</string>
    <string-array name="categoryList">
        <item>原料</item>
        <item>本</item>
        <item>薬</item>
        <item>剣</item>
        <item>鎧</item>
        <item>盾</item>
        <item>杖</item>
        <item>アクセサリ</item>
        <item>地図</item>
        <item>道具</item>
        <item>生物</item>
        <item>食物</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
