<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/overLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/calcLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/settingLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sourceText"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="原料" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <ListView
                    android:id="@+id/srcList"
                    android:layout_width="match_parent"
                    android:layout_height="180dp">

                </ListView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prodText"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="成果品" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <ListView
                    android:id="@+id/prodList"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                </ListView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/resultLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:gravity="bottom"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingLayout">

                <TextView
                    android:id="@+id/resultText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resultText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eqText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultText" />

                <TextView
                    android:id="@+id/GPH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultGPH"
                    android:textAlignment="textEnd"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>